Fix .text alignment in Edge

--- a/code/style.css
+++ b/code/style.css
@@ -307,7 +307,7 @@ body > footer {
     padding: 2.4rem 1rem;
     margin: 1rem 0;
     overflow-wrap: break-word;
-    text-align: start;
+    text-align: left;
 }
 
     @media (max-width: 700px) {
